--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#249E41</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorBackground">#F6F6F6</color>
+    <color name="colorBackground">#E8EAEA</color>
     <color name="colorTextBody">#000000</color>
     <color name="colorNavText">#fff</color>
     <color name="colorAccent">#010101</color>
